<resources>
    <string name="app_name">Cryptofile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">Cryptofile</string>

    <string name="title_activity_settings">Settings</string>
    <string name="delete_account">Delete account</string>
    <string name="choose_save_folder">Choose save folder</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="Home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="help">Help</string>
    <string name="moreOptions">More Options</string>
    <string name="aboutUs">About Us</string>
    <string name="files">Files</string>
    <string name="tools">Tools</string>
    <string name="prikey_list">Keys</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cryptofile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="keys">Keys</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleString">Title</string>
    <string name="select_file_button">Select File</string>
    <string name="upload_file">Upload File</string>
    <string name="selected_file">No file selected</string>
    <string name="file_type_label">File type:</string>
    <string name="detected_filetype">No filetype detected</string>
    <string name="copy_key_to_clipboard">Copy key to clipboard</string>
    <string name="generated_qr_code">Generated QR code</string>
    <string name="file_extension">File extension:</string>
    <string name="uuid">uuid</string>
    <string name="delete_file">Delete File</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_question">Are you sure you would like to log out?</string>

</resources>
